# trustline-onboarder-wip

./: .gitignore  Cargo.toml  LICENSE  README.md  environments.toml  justfile  package-lock.json  package.json
.github/workflows/: ci.yml  pages.yml
app/: app.html  index.html  package.json  tsconfig.json  vite.config.ts
app/public/: stellar.toml
app/src/: App.tsx  authline.css  authline.tsx  config.ts  main.tsx  vite-env.d.ts
app/src/components/: Activate.tsx
contracts/trustline-authorizer/: Cargo.toml
contracts/trustline-authorizer/src/: events.rs  lib.rs  policy.rs  storage.rs  test.rs
contracts/trustline-onboard/: Cargo.toml
contracts/trustline-onboard/src/: lib.rs  test.rs
examples/exchange-withdrawal/: demo-open.mjs  demo.mjs
