[workspace]
resolver = "2"
members = ["contracts/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/theahaco/trustline-onboarder"

[workspace.dependencies]
soroban-sdk = "26.0.1"

# Soroban contract release profile (small, deterministic wasm).
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
