[package]
name = "trustline-authorizer"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Asset-agnostic SAC-admin trustline authorization policy (denylist/allowlist) for AUTH_REQUIRED Stellar assets."

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
